implementado esquemas nos PUT na documentação do  swagger
